<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.mic.scriptpilot.ui.auth.LoginFragment"
        android:label="@string/auth_login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_signup"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_login_to_forgotPassword"
            app:destination="@id/forgotPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/signupFragment"
        android:name="com.mic.scriptpilot.ui.auth.SignupFragment"
        android:label="@string/auth_signup_title"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signup_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.mic.scriptpilot.ui.auth.ForgotPasswordFragment"
        android:label="@string/auth_forgot_title"
        tools:layout="@layout/fragment_forgot_password" />
</navigation>
